--- a/main.css
+++ b/main.css
@@ -34,6 +34,12 @@ header> div.container{
 header ul li{
     margin-right: 20px
 }
+header .logo {
+ width: 100px;
+
+}
+
+
 
 /*основное содержимое*/
 main{
@@ -44,6 +50,17 @@ main{
 }
 main> div.container{
     background-color: #fff
+}
+aside a {
+ color: #000;
+
+ text-decoration: none;
+}
+aside a:hover {
+ text-decoration: undeline;
+}
+aside li {
+ line-height: 1.5em;
 }
 
 /*подвал сайта*/
@@ -73,3 +90,9 @@ footer a:hover {
  text-decoration: underline;
 
 }
+footer li {
+line-height: 2em;
+
+}
+
+
