--- a/style/main.css
+++ b/style/main.css
@@ -1,99 +1,189 @@
+/* Импорт стилей, шрифтов и иконок */
+/* Сброс CSS */
 @import url("https://marksheet.io/css/reset.css");
 
-h1 {
-    font-size: 20px;
-    color:coral
+
+
+
+/* Базовые стили */
+html {
+    height: 100%;
 }
-/*Базовые стили*/
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+.container {
+    display: flex;
+    width: 100%;
+    max-width: 1200px; /*максимальная ширина может иметь другое значение*/
+    padding: 0 15px;
+    margin: 0 auto;
+}
 .button {
     height: 50px;
+    /*width:100px;*/
+}
+.button {
     padding: 20px 30px;
     margin: 10px 20px;
     text-decoration: none !important;
-
- /*width: 100px;*/
-
+}
+.button:hover {
+    background-color: #888;
+}
+.container {
+    padding: 0 15px;
+}
+body {
+    font-size: 14px;
+}
+h1 {
+    font-size: 2.4em;
+    padding: .8em 0 1.2em 0;
+}
+h2 {
+    font-size: 2.2em;
+    padding: .8em 0 1.0em 0;
+}
+h3 {
+    font-size: 2.0em;
+    padding: .8em 0 0.8em 0;
+}
+h4 {
+    font-size: 1.8em;
+    padding: .8em 0 0.6em 0;
+}
+h5 {
+    font-size: 1.6em;
+    padding: .8em 0 0.6em 0;
+}
+h5 {
+    font-size: 1.4em;
+    padding: .8em 0 0.6em 0;
 }
 
- background-color: #666;
 
- border-radius: 5px;
-
+/* Предустановки */
+.row {
+    display: flex;
+    flex-direction: row;
+}
+.column {
+    display: flex;
+    flex-direction: column;
+}
+nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.b-right {
+    border-right: 1px solid #e5e5e5;
 }
 
-/*шапка сайта*/
-header{
-    background-color: #000
-    height: 100px
-    color: #fff
+/* Гибкая верстка */
+img {
+    width: 100%;
+    max-width: 100%;
 }
-header> div.container{
-    height: 100%
+.col-1 {
+    flex: 1;
+}
+.col-2 {
+    flex: 2;
+}
+.col-3 {
+    flex: 3;
+}
+.col-4 {
+    flex: 4;
+}
+.col-5 {
+    flex: 5;
+}
+@media(max-width: 800px) {
+    .container {
+        flex-direction: column;
+    }
+}
+
+
+/* Шапка сайта */
+header {
+    flex: 0 0 auto;
+    background-color: black;
+    height: 100px;
+    color: white;
+}
+header > div.container {
+    height: 100%;
     align-items: center;
 }
-header ul li{
-    margin-right: 20px
-    <a href="#">Пункт 1</a>
+header ul li {
+    margin-right: 20px;
 }
-header .logo {
- width: 100px;
-
+header.logo {
+    width: 100px;
 }
 
-
-
-/*основное содержимое*/
-main{
-    background-color: #e5e5e5;
-    background-image: url(/site/images/background.jpg);
+/* Основное содержимое */
+main {
+    display: flex;
+    flex: 1 0 auto;
+    background-color: lightgray;
+}
+main > div.container {
+    flex: 1 0 auto;
+    background-color: white;
+}
+main {
+    background-image: url(/icestream/images/background.jpg);
     background-position: center center;
     background-size: cover;
 }
-main> div.container{
-    background-color: #fff
+section {
+    flex: 3 0 auto;
+    padding: 0 15px;
+}
+aside {
+    flex: 3 0 auto;
+    padding: 0 15px;
 }
 aside a {
- color: #000;
-
- text-decoration: none;
+    color: black;
+    text-decoration: none;
 }
 aside a:hover {
- text-decoration: undeline;
+    text-decoration: underline;
 }
 aside li {
- line-height: 1.5em;
+    line-height: 1.5em;
 }
-
-/*подвал сайта*/
-footer{
-    background-color: #000
-    height: 200px
-    color: #fff
+/* Подвал сайта */
+footer {
+    flex: 0 0 auto;
+    background-color: black;
+    height: 300px;
+    color: white;
 }
-footer> div.container{
-    height: 100%
+footer > div.container {
+    height: 100%;
     padding: 10px 0;
 }
-footer nav ul{
+footer nav ul {
     margin-right: 30px;
 }
 header a,
-
 footer a {
-color: #fff;
-
- text-decoration: none;
-
+    color: white;
+    text-decoration: none;
 }
-
 header a:hover,
 footer a:hover {
- text-decoration: underline;
-
+    text-decoration: underline;
 }
 footer li {
-line-height: 2em;
-
+    line-height: 2em;
 }
-1
-
