--- a/style/main.css
+++ b/style/main.css
@@ -141,7 +141,7 @@ main > div.container {
     background-color: white;
 }
 main {
-    background-image: url(/afanasyev_official/images/main.jpg);
+    background-image: url(/icestream/images/background.png);
     background-position: center center;
     background-size: cover;
 }
