--- a/style/main.css
+++ b/style/main.css
@@ -3,6 +3,8 @@
 @import url("https://marksheet.io/css/reset.css");
 
 
+
+
 /* Базовые стили */
 html {
     height: 100%;
@@ -11,7 +13,14 @@ body {
     display: flex;
     flex-direction: column;
     height: 100%;
-    font-size: 14px;
+}
+.button {
+    padding: 20px 30px;
+    margin: 10px 20px;
+    text-decoration: none !important;
+}
+.button:hover {
+    background-color: #888;
 }
 .container {
     display: flex;
@@ -19,6 +28,40 @@ body {
     max-width: 1200px; /*максимальная ширина может иметь другое значение*/
     padding: 0 15px;
     margin: 0 auto;
+}
+.button {
+    height: 50px;
+    /*width:100px;*/
+}
+.container {
+    padding: 0 15px;
+}
+body {
+    font-size: 14px;
+}
+h1 {
+    font-size: 2.4em;
+    padding: .8em 0 1.2em 0;
+}
+h2 {
+    font-size: 2.2em;
+    padding: .8em 0 1.0em 0;
+}
+h3 {
+    font-size: 2.0em;
+    padding: .8em 0 0.8em 0;
+}
+h4 {
+    font-size: 1.8em;
+    padding: .8em 0 0.6em 0;
+}
+h5 {
+    font-size: 1.6em;
+    padding: .8em 0 0.6em 0;
+}
+h5 {
+    font-size: 1.4em;
+    padding: .8em 0 0.6em 0;
 }
 
 
@@ -35,6 +78,9 @@ nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
+}
+.b-right {
+    border-right: 1px solid #e5e5e5;
 }
 
 
@@ -64,114 +110,51 @@ img {
     }
 }
 
+
 /* Шапка сайта */
 header {
     flex: 0 0 auto;
-    background-color: #63A3DA;
+    background-color: black;
     height: 100px;
-    color: #fff;
+    color: white;
 }
-header>div.container {
+header > div.container {
     height: 100%;
     align-items: center;
 }
 header ul li {
     margin-right: 20px;
 }
+header.logo {
+    width: 100px;
+}
+
+
 /* Основное содержимое */
 main {
     display: flex;
     flex: 1 0 auto;
-    background-image: url(/icestream/images/main.jpg);
-    background-position: center center;
-    background-size: cover;
-    background-color: #e5e5e5;
+    background-color: lightgray;
 }
 main > div.container {
     flex: 1 0 auto;
+    background-color: white;
 }
-main>div.container {
-    background-color: #fff;
+main {
+    background-image: url(/icestream/images/main.jpg);
+    background-position: center center;
+    background-size: cover;
 }
 section {
-
-}
-aside {
-
-}
-
-
-/* Подвал сайта */
-footer {
-    flex: 0 0 auto;
-    background-color: #63A3DA;
-    height: 200px;
-    color: #fff;
-}
-footer>div.container {
-    height: 100%;
-    padding: 10px 0;
-}
-footer nav ul {
-    margin-right: 30px;
-}
-.button {
-    background-color: #84A2D6;
-    font-family: "Microsoft Uighur";
-    font-size: 12px
-    height: 50px;
-    /*width: 100px;*/
-    padding: 20px 30px;
-    margin: 10px 20px;
-    text-decoration: none !important;
-}
-.button:hover {
-    background-color:#637ADA;
-}
-.container {
+    flex: 3 0 auto;
     padding: 0 15px;
 }
-h1 {
-    font-size: 2.4em;
-    padding: .8em 0 1.2em 0;
-}
-h2{
-    font-size: 2.2em;
-    padding: .8em 0 1.0em 0;
-}
-h3 {
-    font-size: 2.0em;
-    padding: .8em 0 0.8em 0;
-}
-h4 {
-    font-size: 1.8em;
-    padding: .8em 0 0.6em 0;
-}
-h5 {
-    font-size: 1.6em;
-    padding: .8em 0 0.6em 0;
-}
-h6 {
-    font-size: 1.4em;
-    padding: .8em 0 0.6em 0;
-}
-.b-right {
-    border-right: 1px solid #e5e5e5;
-}
-.b-left {
-    border-left: 1px solid #e5e5e5;
-}
-.b-top {
-    border-top: 1px solid #e5e5e5;
-}
-.b-bottom {
-    border-bottom: 1px solid #e5e5e5;
-}
-header-logo {
-    width: 100px;
+aside {
+    flex: 3 0 auto;
+    padding: 0 15px;
 }
 aside a {
-    color: 000;
+    color: black;
     text-decoration: none;
 }
 aside a:hover {
@@ -180,16 +163,32 @@ aside a:hover {
 aside li {
     line-height: 1.5em;
 }
-footer li [
-    line-height: 2em;
-]
+
+
+/* Подвал сайта */
+footer {
+    flex: 0 0 auto;
+    background-color: black;
+    height: 300px;
+    color: white;
+}
+footer > div.container {
+    height: 100%;
+    padding: 10px 0;
+}
+footer nav ul {
+    margin-right: 30px;
+}
 header a,
 footer a {
-    color: #fff;
+    color: white;
     text-decoration: none;
 }
 header a:hover,
 footer a:hover {
     text-decoration: underline;
 }
-
+footer li {
+    line-height: 2em;
+}
+/*Конец*/
