--- a/style/main.css
+++ b/style/main.css
@@ -20,18 +20,12 @@ body {
     text-decoration: none !important;
 }
 .button:hover {
-    background-color: #888;
-}
-.container {
-    display: flex;
-    width: 100%;
-    max-width: 1200px; /*максимальная ширина может иметь другое значение*/
-    padding: 0 15px;
-    margin: 0 auto;
+    background-color: lightgray;
 }
 .button {
     height: 50px;
-    /*width:100px;*/
+    background-color: gray;
+    border-radius: 5px;
 }
 .container {
     padding: 0 15px;
