--- a/style/main.css
+++ b/style/main.css
@@ -24,7 +24,7 @@ body {
 }
 .button {
     height: 50px;
-    background-color: lightcoral;
+    background-color: lightgray;
     border-radius: 5px;
 }
 .container {
